[tool.poetry]
name = "demo"
version = "0.1.0"
description = ""
authors = ["Sam(RYZEN-PC) <abdusamadov55@gamil.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.2.2"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
